tests/spec/parse/snapshots/match_bool.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(active: bool) {
    match active {
      true  => start_service(),
      false => stop_service(),
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "active",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 6,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "bool",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 17,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "active",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 33,
                                byte_length: 6,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Literal {
                                    literal: Boolean(
                                        true,
                                    ),
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 46,
                                        byte_length: 4,
                                    },
                                },
                                expression: Call {
                                    expression: Identifier {
                                        value: "start_service",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 55,
                                            byte_length: 13,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 55,
                                        byte_length: 15,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                            MatchArm {
                                pattern: Literal {
                                    literal: Boolean(
                                        false,
                                    ),
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 76,
                                        byte_length: 5,
                                    },
                                },
                                expression: Call {
                                    expression: Identifier {
                                        value: "stop_service",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 85,
                                            byte_length: 12,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 85,
                                        byte_length: 14,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 77,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 23,
                    byte_length: 83,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 105,
        },
    },
]
